--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .axis text {
     font-family: sans-serif;
-    font-size: 11px;
+    font-size: 8px;
     fill: #ffffff;
     opacity: .5;
 }
@@ -23,5 +23,5 @@ circle {
 
 #scatterPlot {
     background-color: rgb(37 37 38);
-    padding: 20px;
+    padding: 1rem;
 }
